--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -156,7 +156,6 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.78" />
 
-            <!--
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_event_details_details"
                 android:layout_width="0dp"
@@ -170,9 +169,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details"
                 app:layout_constraintVertical_bias="0.806" />
-                -->
 
-            <!--ImageButton
+            <ImageButton
                 android:id="@+id/btn_event_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -182,7 +180,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details"
                 app:layout_constraintTop_toTopOf="parent" />
-                -->
 
             <Button
                 android:id="@+id/btn_event_details_gotoEmotionAvatar"
