--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -67,7 +67,7 @@
                 app:layout_constraintGuide_percent="0.24" />
 
             <View
-                android:id="@+id/btn_welcome_register"
+                android:id="@+id/btn_archive"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:onClick="@{() -> cityScreenViewModel.firstLocationClicked()}"
