--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -123,7 +123,7 @@
                 app:layout_constraintGuide_percent="0.73" />
 
             <View
-                android:id="@+id/btn_welcome_login"
+                android:id="@+id/btn_city_startNewEvent"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="#00000000"
