--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <data>
@@ -20,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/frag_main_descr_city_plan"
-            android:background="@drawable/citymap_faith"/>
+            tools:src="@drawable/citymap_faith" />
 
         <!-- KNOPPEN -->
         <!-- Invisible to make it transparent -->
@@ -98,24 +99,24 @@
                 app:layout_constraintGuide_percent="0.63" />
 
             <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_loc2_bottom"
-            android:layout_width="8dp"
-            android:layout_height="12dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.54" />
+                android:id="@+id/guide_loc2_bottom"
+                android:layout_width="8dp"
+                android:layout_height="12dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.54" />
 
             <!--AVATAR -->
             <ImageView
                 android:id="@+id/image_main_avatar"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/frag_main_descr_your_avatar"
+                android:scaleType="fitXY"
+                android:src="@drawable/meisje_stoer_staan"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/guide_avatar_top"
                 app:layout_constraintStart_toStartOf="@+id/guide_avatar_left"
-                android:src="@drawable/meisje_stoer_staan"/>
+                app:layout_constraintTop_toBottomOf="@+id/guide_avatar_top" />
 
             <View
                 android:id="@+id/btn_city_startNewEvent"
