feat: audio buttons are now shown as enabled/disabled

--- a/app/src/main/res/drawable/audio_play.xml
+++ b/app/src/main/res/drawable/audio_play.xml
@@ -1,4 +1,5 @@
-<vector android:height="50dp" android:viewportHeight="24.0"
-    android:viewportWidth="24.0" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M8,5v14l11,-7z"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:constantSize="true">
+    <item android:drawable="@drawable/audio_play_enabled" android:state_enabled="true" />
+    <item android:drawable="@drawable/audio_play_disabled" android:state_enabled="false" />
+</selector>
