test: fix UI tests
Espresso tests were neglected for some time and UI navigation has
changed since the last succesfull build.
Changes are mainly adding/removing backPressed statements or some waiting.

--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -264,7 +264,7 @@
 
 
                 <jp.wasabeef.richeditor.RichEditor
-                    android:id="@+id/editor"
+                    android:id="@+id/enterText_editor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
