--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="park_sky">#C1FCEE</color>
+    <color name="park_gras">#16F48A</color>
 </resources>
