--- a/app/src/main/res/layout/arrow_to_left.xml
+++ b/app/src/main/res/layout/arrow_to_left.xml
@@ -16,32 +16,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_pijl_nr_rechts" />
+        app:srcCompat="@drawable/ic_pijl_nr_links" />
 
     <ImageView
-        android:id="@+id/img_arrow_right"
-        android:contentDescription="@string/description_arrow_right"
+        android:id="@+id/img_arrow_left"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
-        app:layout_constraintEnd_toStartOf="@+id/txt_arrow_right"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txt_arrow_left"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
     <TextView
-        android:id="@+id/txt_arrow_right"
+        android:id="@+id/txt_arrow_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:gravity="center_horizontal"
         android:padding="2dp"
-        android:text="@string/description_addText"
+        android:text="@string/description_addDrawing"
         android:textAlignment="center"
         android:textColor="#666"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintStart_toEndOf="@+id/img_arrow_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_arrow_left"
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.774359" />
+        app:layout_constraintGuide_percent="0.19" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
