--- a/app/src/main/res/layout/fragment_register_userinfo.xml
+++ b/app/src/main/res/layout/fragment_register_userinfo.xml
@@ -94,9 +94,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="#00000000"
-                android:hint="Kies een gebruikersnaam"
+                android:hint="@string/hint_choose_username"
                 android:inputType="textPersonName"
                 android:text="@={registerUserInfoViewModel.userName}"
+                app:errorMessageResId="@{registerUserInfoViewModel.userNameErrorMessage}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/guide_avatarRecyclerView_top"
@@ -110,6 +111,7 @@
                 android:background="#00000000"
                 android:hint="Kies een wachtwoord"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                app:errorMessageResId="@{registerUserInfoViewModel.passwordErrorMessage}"
                 android:inputType="textPassword"
                 android:text="@={registerUserInfoViewModel.password}"
                 app:layout_constraintBottom_toTopOf="@+id/guide_password_bottom"
@@ -123,6 +125,7 @@
                 android:background="#00000000"
                 android:hint="Herhaal je wachtwoord"
                 android:inputType="textPassword"
+                app:errorMessageResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
                 android:text="@={registerUserInfoViewModel.passwordRepeated}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 app:layout_constraintBottom_toTopOf="@+id/guide_city_top"
