--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -3,4 +3,5 @@
     <integer name="LANDSCAPE">0</integer>
     <integer name="PORTRAIT">1</integer>
     <item name="TAG_VIEWHOLDER" type="id" />
+    <item name="TAG_DETAIL" type="id" />
 </resources>
