--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:onClick="@{() -> eventViewModel.saveText(enterTextViewModel.text)}"
+                android:onClick="@{() -> eventViewModel.saveText(enterTextViewModel.text, enterTextViewModel.existingDetail)}"
                 android:text="@string/save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
